sampleapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-app1
  namespace: mynamespace
spec:
  selector:
    matchLabels:
      app: traefik-app1
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik-app1
    spec:
      containers:
        - name: traefik-app1
          image: traefik-app1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          securityContext:
            privileged: true             
      restartPolicy: Always
      terminationGracePeriodSeconds: 0
