sampleapp/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-app1-ingress
  namespace: mynamespace
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-app1.my-domain.com`)
      kind: Rule
      services:
        - name: traefik-app1-service
          port: 80
      middlewares:
        - name: auth
  tls:
    secretName: traefik-app1-tls
